Fixed a bug in Safari where the images would be too large

--- a/src/sass/state/_mediaqueries.scss
+++ b/src/sass/state/_mediaqueries.scss
@@ -311,7 +311,6 @@
 
     .desktop-about-image {
         display: block!important;
-        height: 100%;
     }
 
     .about-images {
